[tool.poetry]
name = "harmonic-radar-near-field-scanner"
version = "0.1.0"
description = ""
authors = ["CarguelloM <cnarguellomartinez@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pyserial = "^3.5"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
